--- a/contact.html
+++ b/contact.html
@@ -49,8 +49,9 @@
                         <a href="gallery.html" class="nav-link">Gallery</a>
                     </li>
                     <li class="nav-item">
-                        <a href="bonus.html" class="nav-link">Bonus</a>
-                    </li>
+                            <a href="donate.html"
+                                class="nav-link active">Donate</a>
+                        </li>
                     <li class="nav-item">
                         <a href="shop.html" class="nav-link">Shop</a>
                     </li>
@@ -114,7 +115,7 @@
                                 <a
                                     href="mailto:quocduyhoang42@gmail.com">quocduyhoang42@gmail.com</a>
 
-                                <p><strong>Mall DVA:</strong></p>
+                                <p><strong>Mail DVA:</strong></p>
                                 <a
                                     href="mailto:dvavolleyballclub@gmail.com">dvavolleyballclub@gmail.com</a>
 
@@ -138,28 +139,6 @@
                                     155 Trường Chinh, Thanh Xuân, Hà Nội<br>
                                     Vietnam 70000
                                 </address>
-                            </div>
-                        </div>
-
-                        <div class="method-card fade-in">
-                            <div class="method-icon">
-                                <i class="fas fa-comments"></i>
-                            </div>
-                            <h3>Live Chat</h3>
-                            <div class="method-details">
-                                <p><strong>Instant Support:</strong></p>
-                                <p>Chat with our team for quick answers to your
-                                    questions</p>
-
-                                <button class="chat-btn"
-                                    onclick="openLiveChat()">
-                                    <i class="fas fa-comment-dots"></i>
-                                    Start Live Chat
-                                </button>
-                            </div>
-                            <div class="method-hours">
-                                <p><i class="fas fa-clock"></i> Available: 9AM -
-                                    9PM</p>
                             </div>
                         </div>
                     </div>
