--- a/gallery.html
+++ b/gallery.html
@@ -50,7 +50,8 @@
                                 class="nav-link active">Gallery</a>
                         </li>
                         <li class="nav-item">
-                            <a href="bonus.html" class="nav-link">Bonus</a>
+                            <a href="donate.html"
+                                class="nav-link active">Donate</a>
                         </li>
                         <li class="nav-item">
                             <a href="shop.html" class="nav-link">Shop</a>
@@ -193,7 +194,7 @@
                                     href="requirements.html">Requirements</a></li>
                             <li><a href="news.html">News</a></li>
                             <li><a href="gallery.html">Gallery</a></li>
-                            <li><a href="bonus.html">Bonus</a></li>
+                            <li><a href="donate.html">Donate</a></li>
                         </ul>
                     </div>
 
