--- a/ranking.html
+++ b/ranking.html
@@ -50,7 +50,8 @@
                             <a href="gallery.html" class="nav-link">Gallery</a>
                         </li>
                         <li class="nav-item">
-                            <a href="bonus.html" class="nav-link">Bonus</a>
+                            <a href="donate.html"
+                                class="nav-link active">Donate</a>
                         </li>
                         <li class="nav-item">
                             <a href="shop.html" class="nav-link">Shop</a>
